Adde Monolog bundle, added api key and url, added import handler for monolog, settings for ProductImageMessage

--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -18,6 +18,11 @@ when@dev:
             #chromephp:
             #    type: chromephp
             #    level: info
+            import:
+                type: stream
+                path: "%kernel.logs_dir%/import-%kernel.environment%.log"
+                level: debug
+                channels: [ "import" ]
             console:
                 type: console
                 process_psr_3_messages: false
