--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,9 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Service\ProductImport:
+        $fortnite_api_url: '%env(FORTNITE_API_URL)%'
+        $fortnite_api_key: '%env(FORTNITE_API_KEY)%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
