--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.32",
         "stof/doctrine-extensions-bundle": "^1.12",
+        "symfony/amqp-messenger": "6.4.*",
         "symfony/asset": "6.4.*",
         "symfony/asset-mapper": "6.4.*",
         "symfony/console": "6.4.*",
