--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,18 @@ services:
         $fortnite_api_url: '%env(FORTNITE_API_URL)%'
         $fortnite_api_key: '%env(FORTNITE_API_KEY)%'
 
+    app.normalizer.object_normalizer:
+        parent: Symfony\Component\Serializer\Normalizer\ObjectNormalizer
+        tags: [ "serializer.normalizer" ]
+        arguments:
+            $propertyInfoExtractor: null
+            $defaultContext:
+                circular_reference_handler: '@App\Serializer\CircularReferenceHandler'
+                #        ignored_attributes: [ 'insertedOn', 'updatedOn', 'createdAt', 'updatedAt' ]
+                ignored_attributes: [ 'createdAt' ]
+                callbacks: {
+                    'updatedAt': '@App\Serializer\UpdatedAtCallback'
+                }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
