--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -23,7 +23,7 @@ framework:
 
         routing:
             App\Message\ProductImageMessage: async
-            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
+#            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
 
