--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,8 @@ security:
                 # where to redirect after logout
                 target: app_login
 
+            user_checker: App\Security\UserChecker
+
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
