--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "easycorp/easyadmin-bundle": "4.x-dev",
         "guzzlehttp/guzzle": "^7.9",
         "nelmio/api-doc-bundle": "^4.32",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.32",
         "stof/doctrine-extensions-bundle": "^1.12",
