Add lexik_jwt and nelmio_cors bundles

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,6 +10,19 @@ security:
                 class: App\Entity\User
                 property: email
     firewalls:
+        login:
+            pattern: ^/api/login
+            stateless: true
+            json_login:
+                check_path: /api/login_check # or api_login_check as defined in config/routes.yaml
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        api:
+            pattern: ^/api
+            stateless: true
+            jwt: ~
+
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
@@ -38,6 +51,10 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/api/user, roles: ROLE_USER }
+#        - { path: ^/api, roles: ROLE_USER }
+        - { path: ^api/doc }
+#        - { path: ^/test-auth, roles: ROLE_USER }
 
 when@test:
     security:
