--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -4,6 +4,19 @@ nelmio_api_doc:
             title: Shop doc
             description: This is an example shop doc
             version: 1.0.0
+        components:
+            securitySchemes:
+                Bearer:
+                    type: apiKey
+                    in: header
+                    scheme: bearer
+                    name: Authorization
+#                ApiKeyAuth:
+#                    type: apiKey
+#                    in: header
+#                    name: Authorization
+            security:
+                - Bearer: [ ]
     areas: # to filter documented areas
 
         path_patterns:
