--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,8 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "3.57",
+        "helmich/phpunit-json-assert": "^3.5",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
@@ -112,6 +114,6 @@
         "symfony/phpunit-bridge": "^7.1",
         "symfony/stopwatch": "6.4.*",
         "symfony/web-profiler-bundle": "6.4.*",
-        "friendsofphp/php-cs-fixer": "3.57"
+        "zenstruck/foundry": "^2.2"
     }
 }
