--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,6 +25,10 @@ services:
         $fortnite_api_url: '%env(FORTNITE_API_URL)%'
         $fortnite_api_key: '%env(FORTNITE_API_KEY)%'
 
+    App\Service\Mailer:
+        $email_from: '%env(EMAIL_FROM_ADDRESS)%'
+        $email_to: '%env(EMAIL_TO_ADDRESS)%'
+
     app.normalizer.object_normalizer:
         parent: Symfony\Component\Serializer\Normalizer\ObjectNormalizer
         tags: [ "serializer.normalizer" ]
