--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -60,8 +60,8 @@ framework:
             # Route your messages to the transports
 #            'App\Message\SmsNotification': consumer
             'App\Message\ProductImageMessage': consumer
-#            'App\Message\OrderMessage': consumer
-            'App\Message\OrderMessage': async
+            'App\Message\OrderMessage': consumer
+###            'App\Message\OrderMessage': async
 
 # when@test:
 #    framework:
