--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app:api_per_age: '%env(int:ITEMS_PER_PAGE)%'
+    app:import_product_author: '%env(int:IMPORT_PRODUCT_AUTHOR)%'
 
 services:
     # default configuration for services in *this* file
