Add Api User Controller, add UserDto, some fixes to category easy admin

--- a/.env
+++ b/.env
@@ -73,3 +73,9 @@ EMAIL_TO_ADDRESS=ladovod@gmail.com
 # postgresql+advisory://db_user:db_password@localhost/db_name
 LOCK_DSN=flock
 ###< symfony/lock ###
+
+RABBITMQ_URL=amqp://rabbitmq:rabbitmq@rabbitmq:5672/%2f/async
+
+ITEMS_PER_PAGE=10
+
+IMPORT_PRODUCT_AUTHOR=1
