--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.32",
+        "retailcrm/api-client-php": "~6.0",
         "stof/doctrine-extensions-bundle": "^1.12",
         "symfony/amqp-messenger": "6.4.*",
         "symfony/asset": "6.4.*",
@@ -57,6 +58,7 @@
     },
     "config": {
         "allow-plugins": {
+            "civicrm/composer-compile-plugin": true,
             "php-http/discovery": true,
             "symfony/flex": true,
             "symfony/runtime": true
