--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -1,6 +1,7 @@
 monolog:
     channels:
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
+        - retailcrm
 
 when@dev:
     monolog:
@@ -32,6 +33,11 @@ when@dev:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine", "!console"]
+            retailcrm:
+                type: stream
+                path: "%kernel.logs_dir%/retailcrm-%kernel.environment%.log"
+                level: debug
+                channels: [ "retailcrm" ]
 
 when@test:
     monolog:
