--- a/composer.json
+++ b/composer.json
@@ -110,6 +110,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "3.57",
         "helmich/phpunit-json-assert": "^3.5",
+        "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
