--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ public/uploads/
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
